--- a/gb_ui/Base.lproj/Main.storyboard
+++ b/gb_ui/Base.lproj/Main.storyboard
@@ -265,12 +265,20 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7fr-SR-GZb">
                                             <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                         </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hi4-bl-lc9" customClass="LikeControl" customModule="gb_ui" customModuleProvider="target">
+                                            <rect key="frame" x="77" y="97" width="40" height="20"/>
+                                            <color key="tintColor" systemColor="systemPinkColor"/>
+                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="7fr-SR-GZb" firstAttribute="centerY" secondItem="oRS-B4-Kfz" secondAttribute="centerY" id="1oc-nZ-XLf"/>
                                         <constraint firstItem="7fr-SR-GZb" firstAttribute="top" secondItem="oRS-B4-Kfz" secondAttribute="top" id="1zG-eE-tCG"/>
+                                        <constraint firstAttribute="bottom" secondItem="hi4-bl-lc9" secondAttribute="bottom" constant="3" id="3P6-AH-MWz"/>
                                         <constraint firstItem="7fr-SR-GZb" firstAttribute="centerX" secondItem="oRS-B4-Kfz" secondAttribute="centerX" id="6rF-xa-F3b"/>
+                                        <constraint firstItem="hi4-bl-lc9" firstAttribute="width" secondItem="oRS-B4-Kfz" secondAttribute="width" multiplier="0.333333" id="PSJ-6u-GQR"/>
+                                        <constraint firstItem="hi4-bl-lc9" firstAttribute="height" secondItem="oRS-B4-Kfz" secondAttribute="height" multiplier="0.166667" id="UgU-Ic-KS9"/>
                                         <constraint firstItem="7fr-SR-GZb" firstAttribute="leading" secondItem="oRS-B4-Kfz" secondAttribute="leading" id="sUT-tT-26c"/>
+                                        <constraint firstAttribute="trailing" secondItem="hi4-bl-lc9" secondAttribute="trailing" constant="3" id="y76-gL-Jgc"/>
                                     </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
@@ -432,13 +440,13 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="JCR-6T-nyd">
                                             <rect key="frame" x="80" y="16" width="41.5" height="42.5"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1aF-if-o1i">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1aF-if-o1i">
                                                     <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGN-fQ-4Zc">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGN-fQ-4Zc">
                                                     <rect key="frame" x="0.0" y="25.5" width="41.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
