--- a/gb_ui/Base.lproj/Main.storyboard
+++ b/gb_ui/Base.lproj/Main.storyboard
@@ -391,7 +391,7 @@
         <!--News-->
         <scene sceneID="UM2-NX-Fjb">
             <objects>
-                <tableViewController id="shh-8P-F4P" sceneMemberID="viewController">
+                <tableViewController id="shh-8P-F4P" customClass="NewsTableViewController" customModule="gb_ui" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="BhC-aT-9GZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -724,11 +724,11 @@
             </objects>
             <point key="canvasLocation" x="2081" y="-491"/>
         </scene>
-        <!--Item-->
+        <!--News-->
         <scene sceneID="OOI-Z6-FFP">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="S87-6s-pdS" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" selectedImage="lineweight" catalog="system" id="V5N-2H-Oia"/>
+                    <tabBarItem key="tabBarItem" title="News" image="list.bullet.rectangle" catalog="system" selectedImage="list.bullet.rectangle" id="V5N-2H-Oia"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="X2l-sg-adU">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -746,7 +746,7 @@
     </scenes>
     <resources>
         <image name="SARA-N1072" width="1071" height="1323"/>
-        <image name="lineweight" catalog="system" width="128" height="110"/>
+        <image name="list.bullet.rectangle" catalog="system" width="128" height="93"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="person.3" catalog="system" width="128" height="62"/>
         <image name="person.fill.viewfinder" catalog="system" width="128" height="115"/>
