--- a/Cells/NewsCell.xib
+++ b/Cells/NewsCell.xib
@@ -8,27 +8,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewsCell" customModule="gb_ui" customModuleProvider="target">
-            <connections>
-                <outlet property="authorAvatar" destination="VTo-nE-byX" id="vOe-hg-JVf"/>
-                <outlet property="authorName" destination="CgM-4B-CRW" id="xya-UO-uaI"/>
-                <outlet property="likeControl" destination="zaD-cv-LVd" id="J7s-tX-v4O"/>
-                <outlet property="newsImage" destination="Khe-Hd-yGT" id="FtS-KX-64G"/>
-                <outlet property="newsText" destination="Uym-gc-wDd" id="dMK-fB-0Fq"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewsCell" customModule="gb_ui" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsCell" rowHeight="755" id="IZ7-Vq-Ohs" customClass="NewsCell" customModule="gb_ui" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="755"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsCell" rowHeight="652" id="IZ7-Vq-Ohs" customClass="NewsCell" customModule="gb_ui" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="652"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IZ7-Vq-Ohs" id="h83-eS-g4C">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="755"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="652"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2wf-O6-5M7">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2wf-O6-5M7" customClass="Shedow" customModule="gb_ui" customModuleProvider="target">
                         <rect key="frame" x="8" y="8" width="60" height="60"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VTo-nE-byX">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VTo-nE-byX" customClass="RoundedImage" customModule="gb_ui" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                             </imageView>
                         </subviews>
@@ -48,22 +40,20 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Uym-gc-wDd">
-                        <rect key="frame" x="8" y="84" width="398" height="213"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                        <color key="textColor" systemColor="labelColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                    </textView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1g-TA-fS3">
+                        <rect key="frame" x="8" y="76" width="398" height="118"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Khe-Hd-yGT">
-                        <rect key="frame" x="0.0" y="305" width="414" height="414"/>
+                        <rect key="frame" x="0.0" y="202" width="414" height="414"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Khe-Hd-yGT" secondAttribute="height" id="LOI-Z2-RmZ"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zaD-cv-LVd" customClass="LikeControl" customModule="gb_ui" customModuleProvider="target">
-                        <rect key="frame" x="8" y="727" width="60" height="20"/>
+                        <rect key="frame" x="8" y="624" width="60" height="20"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Vyk-TW-JBW"/>
@@ -71,7 +61,7 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zfy-8k-dqz">
-                        <rect key="frame" x="84" y="727" width="60" height="30"/>
+                        <rect key="frame" x="84" y="624" width="60" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <state key="normal" title="2">
                             <color key="titleColor" systemColor="labelColor"/>
@@ -79,48 +69,55 @@
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sai-hZ-rkr">
-                        <rect key="frame" x="160" y="727" width="60" height="20"/>
+                        <rect key="frame" x="160" y="624" width="60" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <state key="normal" title="5" image="arrowshape.turn.up.right" catalog="system">
                             <color key="titleColor" systemColor="labelColor"/>
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hx3-WQ-ABv">
-                        <rect key="frame" x="346" y="727" width="60" height="20"/>
+                        <rect key="frame" x="346" y="624" width="60" height="20"/>
                         <state key="normal" title="123" image="eye" catalog="system">
                             <color key="titleColor" systemColor="labelColor"/>
                         </state>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Uym-gc-wDd" firstAttribute="leading" secondItem="VTo-nE-byX" secondAttribute="leading" id="1ZQ-AS-vsc"/>
-                    <constraint firstAttribute="trailing" secondItem="Uym-gc-wDd" secondAttribute="trailing" constant="8" id="2TP-9Z-dof"/>
+                    <constraint firstItem="y1g-TA-fS3" firstAttribute="top" secondItem="2wf-O6-5M7" secondAttribute="bottom" constant="8" id="0zN-gF-TXa"/>
                     <constraint firstAttribute="trailing" secondItem="hx3-WQ-ABv" secondAttribute="trailing" constant="8" id="4yd-1D-DCH"/>
                     <constraint firstItem="Zfy-8k-dqz" firstAttribute="width" secondItem="zaD-cv-LVd" secondAttribute="width" id="5mv-DW-n3A"/>
-                    <constraint firstItem="Khe-Hd-yGT" firstAttribute="top" secondItem="Uym-gc-wDd" secondAttribute="bottom" constant="8" id="7O4-J7-HXm"/>
                     <constraint firstItem="Sai-hZ-rkr" firstAttribute="height" secondItem="zaD-cv-LVd" secondAttribute="height" id="7ni-HT-uTb"/>
                     <constraint firstItem="CgM-4B-CRW" firstAttribute="centerY" secondItem="VTo-nE-byX" secondAttribute="centerY" id="9PV-0a-ufl"/>
                     <constraint firstItem="Sai-hZ-rkr" firstAttribute="leading" secondItem="Zfy-8k-dqz" secondAttribute="trailing" constant="16" id="CgR-97-cOZ"/>
                     <constraint firstItem="Sai-hZ-rkr" firstAttribute="width" secondItem="zaD-cv-LVd" secondAttribute="width" id="CzE-K4-gMm"/>
                     <constraint firstItem="CgM-4B-CRW" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="trailing" constant="16" id="Czs-SB-8ab"/>
                     <constraint firstItem="Khe-Hd-yGT" firstAttribute="centerX" secondItem="h83-eS-g4C" secondAttribute="centerX" id="FJu-QF-fIi"/>
+                    <constraint firstItem="Khe-Hd-yGT" firstAttribute="top" secondItem="y1g-TA-fS3" secondAttribute="bottom" constant="8" id="FeA-2O-2yA"/>
                     <constraint firstItem="hx3-WQ-ABv" firstAttribute="width" secondItem="zaD-cv-LVd" secondAttribute="width" id="HSr-Pv-kOB"/>
                     <constraint firstItem="2wf-O6-5M7" firstAttribute="leading" secondItem="h83-eS-g4C" secondAttribute="leading" constant="8" id="KRE-oW-pJr"/>
                     <constraint firstItem="Zfy-8k-dqz" firstAttribute="leading" secondItem="zaD-cv-LVd" secondAttribute="trailing" constant="16" id="Kb0-MP-3oM"/>
                     <constraint firstItem="zaD-cv-LVd" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="leading" id="LRU-jf-213"/>
                     <constraint firstItem="Zfy-8k-dqz" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="TOI-Rc-EHC"/>
                     <constraint firstItem="zaD-cv-LVd" firstAttribute="top" secondItem="Khe-Hd-yGT" secondAttribute="bottom" constant="8" id="U4j-Mo-7TG"/>
+                    <constraint firstItem="y1g-TA-fS3" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="leading" id="YgV-eS-I7y"/>
                     <constraint firstItem="hx3-WQ-ABv" firstAttribute="height" secondItem="zaD-cv-LVd" secondAttribute="height" id="bwj-IY-eiT"/>
-                    <constraint firstItem="Uym-gc-wDd" firstAttribute="top" secondItem="2wf-O6-5M7" secondAttribute="bottom" constant="16" id="crT-yD-sd2"/>
                     <constraint firstItem="2wf-O6-5M7" firstAttribute="top" secondItem="h83-eS-g4C" secondAttribute="top" constant="8" id="gdL-6U-6bI"/>
                     <constraint firstItem="Zfy-8k-dqz" firstAttribute="height" secondItem="zaD-cv-LVd" secondAttribute="height" multiplier="1.5" id="k9W-GG-NNv"/>
                     <constraint firstItem="Khe-Hd-yGT" firstAttribute="width" secondItem="h83-eS-g4C" secondAttribute="width" id="lJ3-Ls-csI"/>
                     <constraint firstItem="hx3-WQ-ABv" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="qSN-iy-xJN"/>
                     <constraint firstItem="Sai-hZ-rkr" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="qUk-ay-dnn"/>
+                    <constraint firstAttribute="trailing" secondItem="y1g-TA-fS3" secondAttribute="trailing" constant="8" id="riE-d1-cag"/>
                     <constraint firstAttribute="bottom" secondItem="zaD-cv-LVd" secondAttribute="bottom" constant="8" id="wC8-nW-XT4"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="-311.59420289855075" y="145.64732142857142"/>
+            <connections>
+                <outlet property="authorAvatar" destination="VTo-nE-byX" id="3Yx-94-QWU"/>
+                <outlet property="authorName" destination="CgM-4B-CRW" id="nrT-zx-vfz"/>
+                <outlet property="likeControl" destination="zaD-cv-LVd" id="JNu-tO-ta2"/>
+                <outlet property="newsImage" destination="Khe-Hd-yGT" id="tdC-VJ-fzs"/>
+                <outlet property="newsText" destination="y1g-TA-fS3" id="F6o-cD-AjP"/>
+            </connections>
+            <point key="canvasLocation" x="-311.59420289855075" y="111.16071428571428"/>
         </tableViewCell>
     </objects>
     <resources>
