--- a/Cells/NewsCell.xib
+++ b/Cells/NewsCell.xib
@@ -10,11 +10,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewsCell" customModule="gb_ui" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsCell" rowHeight="652" id="IZ7-Vq-Ohs" customClass="NewsCell" customModule="gb_ui" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="652"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsCell" rowHeight="704" id="IZ7-Vq-Ohs" customClass="NewsCell" customModule="gb_ui" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="704"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IZ7-Vq-Ohs" id="h83-eS-g4C">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="652"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="704"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2wf-O6-5M7" customClass="Shedow" customModule="gb_ui" customModuleProvider="target">
@@ -41,19 +41,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1g-TA-fS3">
-                        <rect key="frame" x="8" y="76" width="398" height="118"/>
+                        <rect key="frame" x="8" y="76" width="398" height="226"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Khe-Hd-yGT">
-                        <rect key="frame" x="0.0" y="202" width="414" height="414"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="Khe-Hd-yGT" secondAttribute="height" id="LOI-Z2-RmZ"/>
-                        </constraints>
-                    </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zaD-cv-LVd" customClass="LikeControl" customModule="gb_ui" customModuleProvider="target">
-                        <rect key="frame" x="8" y="624" width="60" height="20"/>
+                        <rect key="frame" x="8" y="676" width="60" height="20"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Vyk-TW-JBW"/>
@@ -61,7 +55,7 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zfy-8k-dqz">
-                        <rect key="frame" x="84" y="624" width="60" height="30"/>
+                        <rect key="frame" x="84" y="676" width="60" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <state key="normal" title="2">
                             <color key="titleColor" systemColor="labelColor"/>
@@ -69,18 +63,31 @@
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sai-hZ-rkr">
-                        <rect key="frame" x="160" y="624" width="60" height="20"/>
+                        <rect key="frame" x="160" y="676" width="60" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <state key="normal" title="5" image="arrowshape.turn.up.right" catalog="system">
                             <color key="titleColor" systemColor="labelColor"/>
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hx3-WQ-ABv">
-                        <rect key="frame" x="346" y="624" width="60" height="20"/>
+                        <rect key="frame" x="346" y="676" width="60" height="20"/>
                         <state key="normal" title="123" image="eye" catalog="system">
                             <color key="titleColor" systemColor="labelColor"/>
                         </state>
                     </button>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pRs-32-lj8">
+                        <rect key="frame" x="28" y="310" width="358" height="358"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="pRs-32-lj8" secondAttribute="height" multiplier="1:1" id="tL1-Bd-cxG"/>
+                        </constraints>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cP0-td-hRU">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="y1g-TA-fS3" firstAttribute="top" secondItem="2wf-O6-5M7" secondAttribute="bottom" constant="8" id="0zN-gF-TXa"/>
@@ -91,22 +98,22 @@
                     <constraint firstItem="Sai-hZ-rkr" firstAttribute="leading" secondItem="Zfy-8k-dqz" secondAttribute="trailing" constant="16" id="CgR-97-cOZ"/>
                     <constraint firstItem="Sai-hZ-rkr" firstAttribute="width" secondItem="zaD-cv-LVd" secondAttribute="width" id="CzE-K4-gMm"/>
                     <constraint firstItem="CgM-4B-CRW" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="trailing" constant="16" id="Czs-SB-8ab"/>
-                    <constraint firstItem="Khe-Hd-yGT" firstAttribute="centerX" secondItem="h83-eS-g4C" secondAttribute="centerX" id="FJu-QF-fIi"/>
-                    <constraint firstItem="Khe-Hd-yGT" firstAttribute="top" secondItem="y1g-TA-fS3" secondAttribute="bottom" constant="8" id="FeA-2O-2yA"/>
+                    <constraint firstItem="pRs-32-lj8" firstAttribute="leading" secondItem="h83-eS-g4C" secondAttribute="leadingMargin" constant="8" id="Dfc-tY-rxH"/>
                     <constraint firstItem="hx3-WQ-ABv" firstAttribute="width" secondItem="zaD-cv-LVd" secondAttribute="width" id="HSr-Pv-kOB"/>
                     <constraint firstItem="2wf-O6-5M7" firstAttribute="leading" secondItem="h83-eS-g4C" secondAttribute="leading" constant="8" id="KRE-oW-pJr"/>
                     <constraint firstItem="Zfy-8k-dqz" firstAttribute="leading" secondItem="zaD-cv-LVd" secondAttribute="trailing" constant="16" id="Kb0-MP-3oM"/>
                     <constraint firstItem="zaD-cv-LVd" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="leading" id="LRU-jf-213"/>
                     <constraint firstItem="Zfy-8k-dqz" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="TOI-Rc-EHC"/>
-                    <constraint firstItem="zaD-cv-LVd" firstAttribute="top" secondItem="Khe-Hd-yGT" secondAttribute="bottom" constant="8" id="U4j-Mo-7TG"/>
                     <constraint firstItem="y1g-TA-fS3" firstAttribute="leading" secondItem="2wf-O6-5M7" secondAttribute="leading" id="YgV-eS-I7y"/>
                     <constraint firstItem="hx3-WQ-ABv" firstAttribute="height" secondItem="zaD-cv-LVd" secondAttribute="height" id="bwj-IY-eiT"/>
+                    <constraint firstItem="pRs-32-lj8" firstAttribute="top" secondItem="y1g-TA-fS3" secondAttribute="bottom" constant="8" id="dEa-c1-voD"/>
                     <constraint firstItem="2wf-O6-5M7" firstAttribute="top" secondItem="h83-eS-g4C" secondAttribute="top" constant="8" id="gdL-6U-6bI"/>
                     <constraint firstItem="Zfy-8k-dqz" firstAttribute="height" secondItem="zaD-cv-LVd" secondAttribute="height" multiplier="1.5" id="k9W-GG-NNv"/>
-                    <constraint firstItem="Khe-Hd-yGT" firstAttribute="width" secondItem="h83-eS-g4C" secondAttribute="width" id="lJ3-Ls-csI"/>
+                    <constraint firstItem="zaD-cv-LVd" firstAttribute="top" secondItem="pRs-32-lj8" secondAttribute="bottom" constant="8" id="pCq-ba-Tc5"/>
                     <constraint firstItem="hx3-WQ-ABv" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="qSN-iy-xJN"/>
                     <constraint firstItem="Sai-hZ-rkr" firstAttribute="top" secondItem="zaD-cv-LVd" secondAttribute="top" id="qUk-ay-dnn"/>
                     <constraint firstAttribute="trailing" secondItem="y1g-TA-fS3" secondAttribute="trailing" constant="8" id="riE-d1-cag"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="pRs-32-lj8" secondAttribute="trailing" constant="8" id="uiz-OK-IBl"/>
                     <constraint firstAttribute="bottom" secondItem="zaD-cv-LVd" secondAttribute="bottom" constant="8" id="wC8-nW-XT4"/>
                 </constraints>
             </tableViewCellContentView>
@@ -114,10 +121,10 @@
                 <outlet property="authorAvatar" destination="VTo-nE-byX" id="3Yx-94-QWU"/>
                 <outlet property="authorName" destination="CgM-4B-CRW" id="nrT-zx-vfz"/>
                 <outlet property="likeControl" destination="zaD-cv-LVd" id="JNu-tO-ta2"/>
-                <outlet property="newsImage" destination="Khe-Hd-yGT" id="tdC-VJ-fzs"/>
                 <outlet property="newsText" destination="y1g-TA-fS3" id="F6o-cD-AjP"/>
+                <outlet property="photoCollection" destination="pRs-32-lj8" id="dAU-jM-FA8"/>
             </connections>
-            <point key="canvasLocation" x="-311.59420289855075" y="111.16071428571428"/>
+            <point key="canvasLocation" x="-311.59420289855075" y="128.57142857142856"/>
         </tableViewCell>
     </objects>
     <resources>
